crates/cockpitctl-domain-trend/tests/snapshots/trend_expansion_tests__improved_baseline_fixes.snap
---
source: crates/cockpitctl-domain-trend/tests/trend_expansion_tests.rs
expression: trend
---
{
  "verdict_change": {
    "before": "fail",
    "after": "warn"
  },
  "count_deltas": {
    "info_delta": 0,
    "warn_delta": 0,
    "error_delta": -2
  },
  "new_findings": [],
  "fixed_findings": [
    {
      "sensor_id": "lint",
      "code": "E001",
      "message": "E001 message",
      "path": "src/a.rs",
      "line": 10,
      "fingerprint": "fp-e1",
      "severity": "error"
    },
    {
      "sensor_id": "lint",
      "code": "E002",
      "message": "E002 message",
      "path": "src/b.rs",
      "line": 20,
      "fingerprint": "fp-e2",
      "severity": "error"
    }
  ],
  "sensors_added": [],
  "sensors_removed": []
}
