crates/cockpitctl-domain-trend/tests/snapshots/trend_expansion_tests__sensors_added_and_removed.snap
---
source: crates/cockpitctl-domain-trend/tests/trend_expansion_tests.rs
expression: trend
---
{
  "verdict_change": null,
  "count_deltas": {
    "info_delta": 0,
    "warn_delta": 0,
    "error_delta": 0
  },
  "new_findings": [],
  "fixed_findings": [],
  "sensors_added": [
    "new-sensor"
  ],
  "sensors_removed": [
    "old-sensor"
  ]
}
